Reverted from xl-develop-ci-build-1865 and reopened jira issues (OM-43469 ) and reverted commits(288869674c2f5555bbe9987ceab7b94eda80b2c5 dc17b93e78a8dbd386a5e30de90d0a90b03a785e )